--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,18 @@
-.home{
-    text-align: center;
-    padding-left: 50%;
-    background-image: url(https://bit.ly/2wrWNDd );
-}
 .container{
     background-image: url(../assets/images/h_img.jpg);
     background-size: cover;
     color: white;
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
+p{
+    text-align: center;
+}
+.services{
+    background-image: url(../assets/images/s_image.jpg);
+    background-size: cover;
+    color: white;
+    height: 200px;
 }
