--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,14 @@ p{
     color: white;
     height: 200px;
 }
-table{
+/* table{
     table-layout: auto;
     margin: 80px;
     padding: 10px;
     text-align: center;
+    border-collapse: separate;
+    border-spacing: 10px;
 }
 h3{
     text-align: center;
-}
+} */
