--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
-.container{
+#container{
     background-image: url(../assets/images/h_img.jpg);
     background-size: cover;
     color: white;
     text-align: center;
+    height: 400px;
+    padding-top: 30px;
+
 }
 h2{
     text-align: center;
@@ -16,14 +19,9 @@ p{
     color: white;
     height: 200px;
 }
-/* table{
-    table-layout: auto;
-    margin: 80px;
-    padding: 10px;
+.do{
     text-align: center;
-    border-collapse: separate;
-    border-spacing: 10px;
+    margin: auto;
+    padding-left:300px;
+    padding-top: 30px;
 }
-h3{
-    text-align: center;
-} */
