--- a/css/styles.css
+++ b/css/styles.css
@@ -24,4 +24,47 @@ p{
     margin: auto;
     padding-left:300px;
     padding-top: 30px;
+    /* padding-right: 300px; */
+}
+td{
+border-collapse: collapse;
+border-spacing: 1px;
+overflow-x: auto;
+padding: 3px;
+margin: auto;
+padding-bottom: 40px;
+padding-top: 50px;
+padding-left: 15px;
+padding-right: 15px;
+flex-wrap: wrap;
+padding-block-start: 30px;
+text-align: center;
+height: 10px;
+width: 20px;
+}
+td:hover{
+    background-color: white;
+
+}
+.col-md-3{
+    margin: 30px;
+}
+.row{
+    margin: 20px;
+}
+.contact{
+    background-image: url(../assets/images/c_image.jpg);
+    text-align: center;
+    color: white;
+}
+.col-md-12{
+    text-align: center;
+    height: 200px;
+    width: 300px;
+}
+.col-md-2{
+    text-align: right;
+}
+#c{
+    height: 10px;
 }
