--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ text-align: center;
 height: 10px;
 width: 20px;
 }
+.span{
+    text-align: center;
+    padding: 200px;
+
+}
 td:hover{
     background-color: white;
 
@@ -67,4 +72,7 @@ td:hover{
 }
 #c{
     height: 10px;
+}
+h3{
+    text-align: center;
 }
