--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,8 @@ h3{
     padding-left: 200px;
     text-align: center;
 }
+.footer{
+    text-align: center;
+    padding-bottom: 40px;
+    padding-top: 40px;
+}
