changes on the table

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,7 @@ td:hover{
 h3{
     text-align: center;
 }
-/* .col-md-4{
-    text-align: center;
-    padding-right: 50px;
-    display: show;
-    justify-content: space-around; */
-/* } */
+ /* .col-md-4{ */
 
 .p1{
     display: none;
