--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ td:hover{
 .contact{
     background-image: url(../assets/images/c_image.jpg);
     text-align: center;
+    height: 70%;
     color: white;
 }
 
@@ -52,7 +53,6 @@ td:hover{
 h3{
     text-align: center;
 }
- /* .col-md-4{ */
 
 .p1{
     display: none;
